--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -1,9 +1,9 @@
 name: BookMyShow Movie Interest Scraper
 
 on:
-  # Run daily at 6:00 AM IST (12:30 AM UTC)
+  # Run every hour starting from 1:00 PM IST (7:30 AM UTC)
   schedule:
-    - cron: '30 0 * * *'
+    - cron: '30 * * * *'  # Runs at 30 minutes past every hour
   
   # Allow manual trigger
   workflow_dispatch:
